<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center_horizontal"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">


<ImageView
    android:layout_width="wrap_content"
    android:layout_height="127dp"
    android:layout_marginTop="50dp"
    android:src="@drawable/logo"
    />
    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/username5"
        android:background="#f2f1ed"
        android:hint="@string/username"
        />
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/password3"
        android:background="#f3f4ee"
        android:hint="@string/password"
        />
    <Button
        android:id="@+id/Button_signin"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/sign"
        android:background="#ecece9"

        android:text="@string/signin"
        />
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginTop="20dp">

       <EditText
           android:layout_width="wrap_content"
           android:layout_height="35dp"
           android:text="@string/not_registered"
           android:textColor="#f6faff"
           android:paddingLeft="10dp"
           android:textStyle="bold" />
       <EditText
           android:id="@+id/edittext_Register"
           android:layout_width="wrap_content"
           android:layout_height="35dp"
           android:paddingLeft="10dp"
           android:textStyle="bold"
           android:text="@string/Register"/>

   </LinearLayout>

</LinearLayout>